<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DryBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_contact">AddContact</string>
    <string name="addContactMenu">Add Contact</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="numlist">Anonymous Connections</string>
    <string name="geoloc">Proximity Inspirations</string>
    <string name="panic">Panic</string>
    <string name="refreshbutt">Refresh</string>
    <string name="newcontactbutt">Add New Contact</string>
    <string name="posscontactstr">Possible Contacts</string>
    <string name="addcontactstr">Add Contact</string>
    <string name="cancelbutt">Cancel</string>
    <string name="phonenumstr">Phone Number</string>
    <string name="sobdatestr">Sobriety Date</string>
    <string name="geolocopt">Geolocation</string>
    <string name="geoloctext">Geolocation</string>
    <string name="ContactListMenu">Contact List</string>
    <string name="contactlistMenu">Contact List</string>
    <string name="ContactsMenu">Contacts</string>
    <string name="GeolocMenu">Geolocation</string>

</resources>
