<menu xmlns:android="http://schemas.android.com/apk/res/android" ><item android:id="@+id/ContactList" android:menuCategory="system" android:title="@string/ContactListMenu" android:orderInCategory="100" android:enabled="true" android:visible="true" android:actionLayout="@layout/activity_contact_list"></item><item android:id="@+id/AddContact" android:enabled="true" android:visible="true" android:title="@string/addContactMenu" android:actionLayout="@layout/activity_contact_list" android:menuCategory="system" android:orderInCategory="101"></item><item android:id="@+id/Main" android:enabled="true" android:visible="true" android:actionLayout="@layout/activity_main" android:title="Main Menu" android:menuCategory="system" android:orderInCategory="102"></item><item
        android:id="@+id/action_settings"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/action_settings" android:menuCategory="system"/>



    

</menu>
