<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ContactList" >

 <TextView
     android:id="@+id/initmessage"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
     android:text="@string/posscontactstr"
     android:textIsSelectable="false"
     android:textSize="20sp" />

 <Button
     android:id="@+id/addcontactact"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:layout_alignParentRight="true"
     android:onClick="addcontact_callback"
     android:text="@string/newcontactbutt" />

 <Button
     android:id="@+id/refreshbutt"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:layout_alignParentLeft="true"
     android:onClick="refresh_callback"
     android:text="@string/refreshbutt" />

 <ListView
     android:id="@+id/contact_info"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:layout_above="@+id/addcontactact"
     android:layout_below="@+id/initmessage" >

 </ListView>

</RelativeLayout>