<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/numlistbutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:onClick="numlist_callback"
        android:text="@string/numlist" />

    <Button
        android:id="@+id/panicbutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numlistbutt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:onClick="panic_callback"
        android:text="@string/panic" />

    <Switch
        android:id="@+id/geolocbutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/numlistbutt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp" />

    <TextView
        android:id="@+id/geoloctext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/geolocbutt"
        android:layout_alignLeft="@+id/panicbutt"
        android:text="@string/geoloctext" />

</RelativeLayout>
